--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <title>My First Bitstarter</title>
-    <link type="text/css" rel="styleseet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
-    <style type="text/css">  
+    <link type="text/css" rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
+    <style type="text/css">
       body {
         padding-top: 20px;
         padding-bottom: 40px;
@@ -35,9 +35,8 @@
       div.row {
         border: 1px solid;
       }
-    </style>
-  </head>
-
+  </style>
+ </head>
   <body>
     <div class="container">
       <div class="row navigation">
